Fixed menu spacing

--- a/css/style.css
+++ b/css/style.css
@@ -296,7 +296,7 @@ Nav Overlay
 .overlay ul li {
     display: block;
     float: left;
-    margin-right: 20px;
+    margin-right: 20px !important;
 }
 .overlay ul li:last-child {
     margin-right: 0px
